# Udacity-Cpp-Capstone-Mandelbrot

./: CMakeLists.txt  README.md
src/: functions.cpp  functions.h  main.cpp  plot.cpp  plot.h  window.h
